Data/Logs/log-2020-07-10.txt


=============================================================
Время: 2020-07-10 10:09:34.446014

Ошибка:
Traceback (most recent call last):
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 596, in _load_from_module_spec
    spec.loader.exec_module(lib)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "E:\PyProg\ProstoTools(Original version)\Cogs\games.py", line 266
    async def dog(self, ctx):
                            ^
IndentationError: unindent does not match any outer indentation level

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "bot.py", line 75, in <module>
    client.load_extension(f'Cogs.{filename[:-3]}')
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 653, in load_extension
    self._load_from_module_spec(spec, name)
  File "C:\Users\ProstoChelovek\AppData\Local\Programs\Python\Python38-32\lib\site-packages\discord\ext\commands\bot.py", line 599, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'Cogs.games' raised an error: IndentationError: unindent does not match any outer indentation level (games.py, line 266)

=============================================================

=============================================================
Время: 2020-07-10 10:10:09.710602

Ошибка:
Command raised an exception: NameError: name 'client' is not defined
=============================================================

=============================================================
Время: 2020-07-10 10:12:39.503710

Ошибка:
Command raised an exception: KeyError: 0
=============================================================

=============================================================
Время: 2020-07-10 10:13:03.290434

Ошибка:
Command raised an exception: HTTPException: 400 Bad Request (error code: 50035): Invalid Form Body
In embed.image.url: Not a well formed URL.
=============================================================

=============================================================
Время: 2020-07-10 10:16:46.181815

Ошибка:
Command raised an exception: JSONDecodeError: Expecting value: line 1 column 1 (char 0)
=============================================================

=============================================================
Время: 2020-07-10 10:19:17.922835

Ошибка:
Command raised an exception: JSONDecodeError: Expecting value: line 1 column 1 (char 0)
=============================================================

=============================================================
Время: 2020-07-10 19:39:47.236920

Ошибка:
Command raised an exception: TypeError: 'method' object is not subscriptable
=============================================================

=============================================================
Время: 2020-07-10 19:40:15.222711

Ошибка:
Command raised an exception: AttributeError: 'function' object has no attribute 'read'
=============================================================

=============================================================
Время: 2020-07-10 19:40:39.709912

Ошибка:
Command raised an exception: AttributeError: 'str' object has no attribute 'read'
=============================================================

=============================================================
Время: 2020-07-10 19:49:48.115659

Ошибка:
Command raised an exception: AttributeError: 'str' object has no attribute 'read'
=============================================================

=============================================================
Время: 2020-07-10 19:50:05.572553

Ошибка:
Command raised an exception: TypeError: string indices must be integers
=============================================================

=============================================================
Время: 2020-07-10 19:56:06.233040

Ошибка:
Command raised an exception: TypeError: string indices must be integers
=============================================================

=============================================================
Время: 2020-07-10 19:56:39.170631

Ошибка:
Command raised an exception: AttributeError: 'str' object has no attribute 'read'
=============================================================

=============================================================
Время: 2020-07-10 20:15:22.344445

Ошибка:
Command raised an exception: TypeError: Object of type Translated is not JSON serializable
=============================================================

=============================================================
Время: 2020-07-10 20:18:18.418706

Ошибка:
Command "panda" is not found
=============================================================

=============================================================
Время: 2020-07-10 20:18:26.918087

Ошибка:
Command "panda" is not found
=============================================================